# fastapi-langchain-service

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
docs/: api.md  architecture.md  configuration.md  deployment.md  development.md  error-handling.md  prompts.md  testing.md
examples/: chat-request.json  health-response.json
src/fastapi_langchain_service/: __init__.py  __main__.py  config.py  errors.py  logging.py  main.py  observability.py
src/fastapi_langchain_service/api/: dependencies.py  router.py
src/fastapi_langchain_service/api/routes/: chat.py  health.py
src/fastapi_langchain_service/chains/: __init__.py  chat.py
src/fastapi_langchain_service/schemas/: __init__.py  chat.py  health.py
src/fastapi_langchain_service/services/: __init__.py  chat.py
tests/: conftest.py  test_chat_contract.py  test_health_contract.py  test_observability.py  test_settings.py
