[project]
name = "fastapi-langchain-service"
version = "0.1.0"
description = "FastAPI service for LangChain chat workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "pydantic-settings",
    "python-dotenv",
    "uvicorn[standard]",
]

[project.scripts]
fastapi-langchain-service = "fastapi_langchain_service.__main__:main"

[dependency-groups]
dev = [
    "httpx",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_langchain_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_return_any = true
